--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,11 +8,15 @@
     "dot_aliases.tmpl": "shellscript",
     "dot_bash_profile": "shellscript",
     "dot_bash_prompt": "shellscript",
+    "dot_curlrc": "ini",
+    "dot_editorconfig": "ini",
     "dot_exports.tmpl": "shellscript",
     "dot_functions": "shellscript",
     "dot_gitconfig.tmpl": "ini",
     "dot_gitignore": "ignore",
+    "dot_inputrc": "shellscript",
     "dot_path.tmpl": "shellscript",
+    "dot_screenrc": "ini",
     "dot_vimrc": "shellscript",
     "dot_zshrc": "shellscript"
   }
