chore(starship): change directory style to green
Blue is not good visible on monitor

--- a/home/dot_config/starship.toml
+++ b/home/dot_config/starship.toml
@@ -29,7 +29,7 @@ format = " [$duration]($style)"
 style = "yellow"
 
 [directory]
-style = "blue"
+style = "green"
 read_only = " "
 truncation_length = 4
 truncate_to_repo = false
